Adding new CSES problems that have been solved.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,11 @@ add_subdirectory(array_description)
 add_subdirectory(apple_division)
 add_subdirectory(apartments)
 add_subdirectory(book_shop)
+add_subdirectory(dynamic_sum_queries)
+
 add_subdirectory(edit_distance)
+add_subdirectory(static_queries)
+add_subdirectory(static_min_range_queries)
 add_subdirectory(stick_lengths)
 add_subdirectory(sum_values)
 add_subdirectory(two_sets_2)
