Newer problems added.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ add_subdirectory(apartments)
 add_subdirectory(book_shop)
 add_subdirectory(dynamic_sum_queries)
 
+add_subdirectory(counting_rooms)
+add_subdirectory(labyrinth)
 add_subdirectory(message_route)
 add_subdirectory(monsters)
 
@@ -24,5 +26,8 @@ add_subdirectory(range_xor)
 add_subdirectory(range_update)
 
 add_subdirectory(stick_lengths)
+add_subdirectory(subarray_sums_2)
+add_subdirectory(subarray_division)
+
 add_subdirectory(sum_values)
 add_subdirectory(two_sets_2)
