Adding new problems to the set of problems.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,10 +29,12 @@ add_subdirectory(range_update)
 add_subdirectory(stick_lengths)
 add_subdirectory(subarray_sums_2)
 add_subdirectory(nearest)
+add_subdirectory(restaurant_customers)
 
 add_subdirectory(playlist)
 
 add_subdirectory(subarray_division)
 add_subdirectory(subarray_distinct)
 add_subdirectory(sum_values)
+add_subdirectory(tasks_and_deadlines)
 add_subdirectory(two_sets_2)
