Sliding Window Cost solution.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ add_subdirectory(range_update)
 add_subdirectory(range_xor) 
 add_subdirectory(restaurant_customers)
 add_subdirectory(sliding_window_median)
+add_subdirectory(sliding_window_cost)
 add_subdirectory(static_min_range_queries)
 add_subdirectory(static_queries)
 add_subdirectory(stick_lengths)
