--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,11 +15,13 @@ add_subdirectory(counting_rooms)
 add_subdirectory(dynamic_min_range_queries)
 add_subdirectory(dynamic_sum_queries)
 add_subdirectory(edit_distance)
+add_subdirectory(forest_queries)
 add_subdirectory(labyrinth)
 add_subdirectory(message_route)
 add_subdirectory(monsters)
 add_subdirectory(movie_festival)
 add_subdirectory(nearest)
+add_subdirectory(palindrome_reorder)
 add_subdirectory(playlist)
 add_subdirectory(range_update)
 add_subdirectory(range_xor) 
